# PubMed-Author-Scan

./: .gitignore  README.md  pyproject.toml  res.csv
pubmed_authorscan/: __init__.py  cli.py  core.py
